#710 - Refactor /query/data Endpoint and Remove Obsolete /query/data/{queryId}
- mark GET /query/data/{queryId} as deprecated
- return lastModified timestamp in iso8601 format instead of sql timestamp format
- rename 'totalNumberOfPatients' to 'resultSize' in feasibility queries
