# src/main/java/de/numcodex/feasibility_gui_backend/query/QueryHandlerService.java
@@ -94,7 +94,7 @@ public class QueryHandlerService {
         return QueryResult.builder()
             .queryId(queryId)
             .resultLines(resultLines)
-            .totalNumberOfPatients(totalMatchesInPopulation)
+            .resultSize(totalMatchesInPopulation)
             .build();
     }
 
