# src/main/java/de/numcodex/feasibility_gui_backend/query/api/QueryListEntry.java
@@ -14,7 +14,7 @@ public record QueryListEntry(
     @JsonProperty String label,
     @JsonProperty String comment,
     @JsonProperty Timestamp createdAt,
-    @JsonProperty Long totalNumberOfPatients,
+    @JsonProperty Long resultSize,
     @JsonProperty Boolean isValid
 )  {
 
