# src/main/java/de/numcodex/feasibility_gui_backend/query/v5/FeasibilityQueryHandlerRestController.java
@@ -199,7 +199,7 @@ public class FeasibilityQueryHandlerRestController {
     QueryResult queryResult = queryHandlerService.getQueryResult(queryId,
         ResultDetail.DETAILED_OBFUSCATED);
 
-    if (queryResult.totalNumberOfPatients() < privacyThresholdResults) {
+    if (queryResult.resultSize() < privacyThresholdResults) {
       var issues = FeasibilityIssues.builder()
               .issues(List.of(FeasibilityIssue.PRIVACY_RESTRICTION_RESULT_SIZE))
               .build();
@@ -256,7 +256,7 @@ public class FeasibilityQueryHandlerRestController {
     var queryResult = queryHandlerService.getQueryResult(queryId,
         ResultDetail.SUMMARY);
 
-    if (queryResult.totalNumberOfPatients() < privacyThresholdResults) {
+    if (queryResult.resultSize() < privacyThresholdResults) {
       var issues = FeasibilityIssues.builder()
               .issues(List.of(FeasibilityIssue.PRIVACY_RESTRICTION_RESULT_SIZE))
               .build();
