# src/main/resources/static/v3/api-docs/swagger.yaml
@@ -891,7 +891,7 @@ components:
           type: string
           examples:
             - this can be a longer text explaining what this query is for
-        totalNumberOfResults:
+        resultSize:
           type: integer
         content:
           type: object
@@ -940,6 +940,8 @@ components:
           format: date-time
         resultSize:
           type: integer
+        createdBy:
+          type: string
         ccdl:
           type: object
           properties:
@@ -972,7 +974,7 @@ components:
     QueryResultSummary:
       type: object
       properties:
-        totalNumberOfPatients:
+        resultSize:
           type: integer
           format: int64
         queryId:
@@ -984,7 +986,7 @@ components:
     QueryResultObfuscated:
       type: object
       properties:
-        totalNumberOfPatients:
+        resultSize:
           type: integer
           format: int64
         queryId:
@@ -996,7 +998,7 @@ components:
     QueryResult:
       type: object
       properties:
-        totalNumberOfPatients:
+        resultSize:
           type: integer
           format: int64
         queryId:
